--- a/ZingMp3/Base.lproj/Main.storyboard
+++ b/ZingMp3/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <!--Download-->
         <scene sceneID="ccp-nH-Hjm">
             <objects>
-                <viewController id="QjB-wx-saA" customClass="tableViewOnline" customModule="ZingMp3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="QjB-wx-saA" customClass="LocalView" customModule="ZingMp3" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="9dK-Yy-p4f"/>
                         <viewControllerLayoutGuide type="bottom" id="1AU-DE-tNQ"/>
@@ -28,7 +28,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Cell" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="uAm-fO-DFx">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Cell" selectionStyle="default" indentationWidth="10" id="uAm-fO-DFx">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uAm-fO-DFx" id="9L9-Ah-alq">
@@ -38,10 +38,6 @@
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </tableViewCell>
                                 </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="QjB-wx-saA" id="9Ki-AO-w3f"/>
-                                    <outlet property="delegate" destination="QjB-wx-saA" id="PBl-ZD-3Ry"/>
-                                </connections>
                             </tableView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fso-Ug-tEX">
                                 <rect key="frame" x="0.0" y="490" width="375" height="128"/>
@@ -63,9 +59,6 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Download" image="iconDownload" id="Tah-O5-X5a"/>
-                    <connections>
-                        <outlet property="myTableView" destination="sa9-Kj-bWy" id="gpo-2q-8pm"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z4Z-CM-pSg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -116,6 +109,10 @@
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="0bM-0O-hyl" id="dgF-NT-C1M"/>
+                                    <outlet property="delegate" destination="0bM-0O-hyl" id="2Ug-sT-c5k"/>
+                                </connections>
                             </tableView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3LW-Od-LwB">
                                 <rect key="frame" x="0.0" y="490" width="375" height="128"/>
@@ -137,6 +134,9 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Online" image="iconOnline" id="yjA-p9-sG8"/>
+                    <connections>
+                        <outlet property="myTableView" destination="6Sq-bh-lco" id="7qO-oY-rXp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hfi-St-aM5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
